# mstch

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
benchmark/: CMakeLists.txt
cmake/: mstch-config.cmake
include/: mstch.h  types.h
include/mstch/: mstch.h  mstch.hpp
src/: CMakeLists.txt  mstch.cpp  render_context.cpp  render_context.h  render_context.hpp  template_type.cpp  template_type.hpp  token.cpp  token.h  token.hpp  utils.cpp  utils.h  utils.hpp
src/state/: in_inverted_section.cpp  in_inverted_section.h  in_inverted_section.hpp  in_section.cpp  in_section.h  in_section.hpp  outside_section.cpp  outside_section.h  outside_section.hpp  render_state.h  render_state.hpp
src/visitor/: get_token.cpp  get_token.hpp  has_token.cpp  has_token.hpp  is_node_empty.cpp  is_node_empty.h  is_node_empty.hpp  render_node.cpp  render_node.h  render_node.hpp  render_section.cpp  render_section.h  render_section.hpp  to_json.cpp  to_json.h  to_json.hpp
test/: CMakeLists.txt  benchmark_main.cpp  filetoheader.cpp  headerize.cpp  json.hpp  main.cpp  specs_lambdas.hpp  test_context.hpp  test_main.cpp
test/data/: ampersand_escape.data  ampersand_escape.h  ampersand_escape.hpp  apostrophe.data  apostrophe.h  apostrophe.hpp  array_of_strings.h  array_of_strings.hpp  backslashes.data  backslashes.h  backslashes.hpp  bug_11_eating_whitespace.h  bug_11_eating_whitespace.hpp  bug_length_property.h  bug_length_property.hpp  changing_delimiters.hpp  comments.data  comments.hpp  complex.hpp  context_lookup.h  context_lookup.hpp  delimiters.hpp  disappearing_whitespace.data  disappearing_whitespace.h  disappearing_whitespace.hpp  dot_notation.hpp  double_render.data  double_render.h  double_render.hpp  empty_list.h  empty_list.hpp  empty_sections.h  empty_sections.hpp  empty_string.h  empty_string.hpp  empty_template.hpp  error_eof_in_section.hpp  error_eof_in_section.mustache  error_eof_in_tag.hpp  error_eof_in_tag.mustache  (+101 more)
